# HaskellProgramming

./: README.md
HaskellProgramming-Allen-Moronuki/ch15/chapterExercises/semigroupExercises/: SemigroupExercises.hs  semigroupExercises.cabal
HaskellProgramming-Allen-Moronuki/ch16/test/: instancesFunc.hs  test.cabal
HaskellProgramming-Allen-Moronuki/ch16/test/.stack-work/install/bf6b262a/flag-cache/: QuickCheck-2.11.3-3XHQpBYb83U2mMvNz2AjQX  primitive-0.6.3.0-DaZpcxwJp2TGn8ITSgfI4C  random-1.1-9LLJAJa4iQFLJiLXBOBXBV  tf-random-0.5-BZa4jMFCdGCK8yjkzN18lQ
HaskellProgramming-Allen-Moronuki/ch18/badMonad/: BadMonad.hs  badMonad.cabal
HaskellProgramming-Allen-Moronuki/ch18/badMonad/.stack-work/install/dbe016db/flag-cache/: StateVar-1.1.1.0-BmCYP2gLue736T5hzlFgTZ  bifunctors-5.5.3-IuzPzKHofPiGCuDoiyQSN8  cabal-doctest-1.0.6-E57gwmEN5fa2uY0bq8bb44  checkers-0.4.10-5KS9d8NmUXj5iz8OGXYaZY  contravariant-1.4.1-JVQiW0LC0hP9QzzUmHwLtJ  distributive-0.5.3-4U82O12jcn83TVRfsshTrt  tf-random-0.5-BZa4jMFCdGCK8yjkzN18lQ  th-abstraction-0.2.8.0-Ct896m4STpK8GA15Cl5y88
ProgrammingInHaskell-Hutton/: ProgrammingInHaskell-Hutton.cabal  package.yaml
ch11/: binaryTree.hs  constuctingAndDeconstructing.hs  dataConstructorsAndValues.hs  forExample.hs  infixDataConstructors.hs  logicGoats.hs  productTypeExample.hs  quantum.hs
ch15/: optional.hs
ch17/: constantInstance.hs  cow.hs  identityInstance.hs  person.hs
ch18/: exampleMaybeMonad.hs  sequencing.hs
ch2/: learn.hs  wherePractice.hs
ch3/: reverseCurryIsAwesome.hs  stringFunctions.hs
ch4/: awesomeLists.hs  booleanPractice.hs
ch7/: caseMatchingExamples.hs  casePractice.hs  employee.hs  greetIfCool.hs  guardsExamples.hs  matchingTuples.hs
(+236 files in other folders)
