name:           test
version: 0.1.0
license-file: LICENSE
author: Sebastian Lemus Cadena
category: Text
build-type: Simple
cabal-version: >=1.10

library
  exposed-modules:  Test
                  , InstancesFunc
  ghc-options:      -Wall -fwarn-tabs
  build-depends:    base >=4.7 && <5
                  , QuickCheck
  hs-source-dirs:   .
  default-language: Haskell2010
