name:                badMonad
version:             0.1.0.0
homepage:            https://github.com/githubuser/bad-monad#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  exposed-modules:  BadMonad
  ghc-options:      -Wall -fwarn-tabs
  build-depends:    base >=4.7 && <5
                  , QuickCheck
                  , checkers
  hs-source-dirs:   .
  default-language: Haskell2010
